--- a/de/download.po
+++ b/de/download.po
@@ -140,10 +140,10 @@ msgstr ""
 
 #: ../en/download.md:43
 msgid ""
-"- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for "
+"- [testflight invite page](https://testflight.apple.com/join/WVoYFOZe) for "
 "your iPhone or iPad."
 msgstr ""
-"- [testflight Einladungsseite](https://testflight.apple.com/join/uEMc1NxS) "
+"- [testflight Einladungsseite](https://testflight.apple.com/join/WVoYFOZe) "
 "für Ihr iPhone oder iPad."
 
 #: ../en/download.md:45
