--- a/es/download.po
+++ b/es/download.po
@@ -135,11 +135,11 @@ msgstr ""
 
 #: ../en/download.md:43
 msgid ""
-"- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for "
+"- [testflight invite page](https://testflight.apple.com/join/WVoYFOZe) for "
 "your iPhone or iPad."
 msgstr ""
 "- [página de invitación de "
-"testflight](https://testflight.apple.com/join/uEMc1NxS) para tu iPhone o "
+"testflight](https://testflight.apple.com/join/WVoYFOZe) para tu iPhone o "
 "iPad."
 
 #: ../en/download.md:45
