--- a/fr/gdpr.po
+++ b/fr/gdpr.po
@@ -1,5 +1,5 @@
 # Translators:
-# björn petersen <r10s@b44t.com>, 2019
+# polo lancien <polo.lancien@aliceadsl.fr>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-01 22:15+0200\n"
 "PO-Revision-Date: 2019-01-27 23:24+0000\n"
-"Last-Translator: björn petersen <r10s@b44t.com>, 2019\n"
+"Last-Translator: polo lancien <polo.lancien@aliceadsl.fr>, 2019\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,40 +25,49 @@ msgid ""
 "---"
 msgstr ""
 "---\n"
-"title: GDPR\n"
+"title: RGPD et protection de la vie privée\n"
 "layout: default-fr\n"
 "---"
 
 #: ../en/gdpr.md:7
 msgid "# Privacy by Design"
-msgstr ""
+msgstr "# Protection de la vie privée dès la conception"
 
 #: ../en/gdpr.md:10
 msgid ""
 "- **Confidentiality**: End-to-end encryption by default, by implementing [Autocrypt\n"
 "  Level 1](https://autocrypt.org)."
 msgstr ""
+"- **Confidentialité** : Chiffrement de bout en bout par défaut, en "
+"implémentant [Autocrypt Level 1](https://autocrypt.org)."
 
 #: ../en/gdpr.md:12
 msgid ""
 "- **Data minimization**: No alignment or uploading of the address-book "
 "content."
 msgstr ""
+"- **Minimisation des données** : Aucun rapprochement ni téléchargement du "
+"contenu du carnet d'adresses."
 
 #: ../en/gdpr.md:14
 msgid ""
 "- **Data avoidance**: No Delta Chat server, no processing of personal data."
 msgstr ""
+"- **Évitement des données** : Pas de serveur Delta Chat, pas de traitement "
+"de données personnelles."
 
 #: ../en/gdpr.md:17
 msgid "# Further Compliance to the GDPR "
-msgstr ""
+msgstr "# Conformité future au RGPD"
 
 #: ../en/gdpr.md:19
 msgid ""
 "- Does not require any **consent** (article 7 GDPR) from the users or their "
 "contacts (data subjects), because no address-book-data is transmitted."
 msgstr ""
+"- Ne nécessite aucun **consentement** (article 7 du RGPD) de la part des "
+"utilisateurs ou de leurs contacts (personnes concernées), car aucune donnée "
+"du carnet d'adresses n'est transmise."
 
 #: ../en/gdpr.md:21
 msgid ""
@@ -66,18 +75,28 @@ msgid ""
 "controller (organisation), because no additional third party will process "
 "the E-Mail related personal data. "
 msgstr ""
+"- Peut être utilisé **sans nécessiter de contrat ou d'instructions** de la "
+"part d'un responsable du traitement (organisation), car aucune tierce partie"
+" supplémentaire ne traitera les données à caractère personnel relatives aux "
+"courriers électroniques. "
 
 #: ../en/gdpr.md:23
 msgid ""
 "# How data controllers (organizations) benefit from using Delta Chat in "
 "complying to the GDPR"
 msgstr ""
+"# Comment les contrôleurs de données (organisations) tirent-ils profit de "
+"l'utilisation de Delta Chat pour se conformer au RGPD ?"
 
 #: ../en/gdpr.md:26
 msgid ""
 "- Creates **no additional information requirements** for the controller towards direct or indirect data subjects \n"
 "  regarding any collection of address-book-data, article 13, 14 GDPR."
 msgstr ""
+"- Ne crée **aucune exigence d'information supplémentaire** pour le "
+"responsable du traitement à l'égard des personnes concernées directement ou "
+"indirectement concernant toute collecte de données du carnet d'adresses, "
+"article 13, 14 du RGPD."
 
 #: ../en/gdpr.md:28
 msgid ""
@@ -85,6 +104,10 @@ msgid ""
 "Chat (Article 35 GDPR), because it processes no particular additional data "
 "beyond E-Mail messenging."
 msgstr ""
+"- Ne nécessite **aucune évaluation de l'impact sur la protection des "
+"données** à effectuer pour Delta Chat (article 35 du RGPD), car il ne traite"
+" aucune donnée supplémentaire particulière en dehors des messages "
+"électroniques."
 
 #: ../en/gdpr.md:33
 msgid ""
@@ -93,12 +116,21 @@ msgid ""
 "  on eventual **evidence documentation**, (article 30 GDPR) \n"
 "  as well as on the **data protection certification process**, Article 25 (3), 42 GDPR."
 msgstr ""
+"- L'ajout des mesures de protection de la vie privée de Delta Chat au "
+"**registre des activités de traitement** peut avoir un impact positif sur "
+"d'éventuels **documents probants**, (article 30 RGPD ainsi que sur le "
+"**processus de certification en matière de protection des données**, article"
+" 25, paragraphe 3, et article 42 du RGPD."
 
 #: ../en/gdpr.md:36
 msgid ""
 "- The **record of processing activities** linked to the messenger-communication is\n"
 "  reduced to identifying the email-providers and recording their activities, Article 30 (2) GDPR."
 msgstr ""
+"- Le **dossier des activités de traitement** liées à la messagerie-"
+"communication se limite à l'identification des fournisseurs de courrier "
+"électronique et à l'enregistrement de leurs activités, article 30, "
+"paragraphe 2, du RGPD."
 
 #: ../en/gdpr.md:40
 msgid ""
@@ -106,9 +138,14 @@ msgid ""
 "  are generally also limited to the communication data processed \n"
 "  by the controller and the email providers."
 msgstr ""
+"- Risques qui subsistent pour les droits et libertés des personnes physiques"
+" se limitent généralement aussi aux données de communication traitées par le"
+" contrôleur et les fournisseurs de messagerie."
 
 #: ../en/gdpr.md:43
 msgid ""
 "This statement reflects the General Data Protection Regulation (GDPR) as of "
 "16.05.2018."
 msgstr ""
+"Cette déclaration reflète le Règlement général sur la protection des données"
+" (RGPD) en vigueur au 16.05.2018."
