--- a/ru/index.po
+++ b/ru/index.po
@@ -1,7 +1,8 @@
 # Translators:
 # björn petersen <r10s@b44t.com>, 2018
-# Alexander, 2019
+# Alexander Krotov, 2019
 # Andrei Guliaikin <lycoris@ya.ru>, 2019
+# solokot <solokot@gmail.com>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -10,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-01 22:15+0200\n"
 "PO-Revision-Date: 2018-03-23 12:35+0000\n"
-"Last-Translator: Andrei Guliaikin <lycoris@ya.ru>, 2019\n"
+"Last-Translator: solokot <solokot@gmail.com>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/delta-chat/teams/76181/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,6 +35,7 @@ msgstr ""
 #: ../en/index.md:7
 msgid "# Chat over e-mail and head back to the future with us!"
 msgstr ""
+"# Общайтесь по электронной почте и возвращайтесь в будущее вместе с нами!"
 
 #: ../en/index.md:9
 msgid ""
@@ -48,6 +50,8 @@ msgid ""
 "**Delta Chat is like Telegram or Whatsapp but without the tracking or central control.**\n"
 "Check out our [GDPR compliancy statement](gdpr)."
 msgstr ""
+"**Delta Chat как Telegram или Whatsapp, но без отслеживания и централизованного управления.**\n"
+"Ознакомьтесь с нашим [заявлением о соответствии GDPR ](gdpr)."
 
 #: ../en/index.md:15
 msgid ""
@@ -55,7 +59,7 @@ msgid ""
 "system ever: the existing e-mail server network."
 msgstr ""
 "**У Delta Chat нет собственных серверов**, вместо них используется самая "
-"большая и распределенная открытая система обмена сообщениями: существующая "
+"большая и распределённая открытая система обмена сообщениями: существующая "
 "сеть серверов электронной почты."
 
 #: ../en/index.md:18
