--- a/ca/gdpr.po
+++ b/ca/gdpr.po
@@ -1,5 +1,6 @@
 # Translators:
 # björn petersen <r10s@b44t.com>, 2019
+# Calbasi <joan@calbasi.net>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -8,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-01 22:15+0200\n"
 "PO-Revision-Date: 2019-01-27 23:24+0000\n"
-"Last-Translator: björn petersen <r10s@b44t.com>, 2019\n"
+"Last-Translator: Calbasi <joan@calbasi.net>, 2019\n"
 "Language-Team: Catalan (https://www.transifex.com/delta-chat/teams/76181/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,34 +32,43 @@ msgstr ""
 
 #: ../en/gdpr.md:7
 msgid "# Privacy by Design"
-msgstr ""
+msgstr "# Privacitat per Disseny"
 
 #: ../en/gdpr.md:10
 msgid ""
 "- **Confidentiality**: End-to-end encryption by default, by implementing [Autocrypt\n"
 "  Level 1](https://autocrypt.org)."
 msgstr ""
+"- **Confidencialitat**: Encriptació d'extrem a extrem per defecte, amb la implementació d'[Autocrypt\n"
+"  Nivell 1](https://autocrypt.org)."
 
 #: ../en/gdpr.md:12
 msgid ""
 "- **Data minimization**: No alignment or uploading of the address-book "
 "content."
 msgstr ""
+"- **Minimització de les dades**: No es sincronitza ni es descarrega el "
+"contingut de la llibreta d'adreces de contactes."
 
 #: ../en/gdpr.md:14
 msgid ""
 "- **Data avoidance**: No Delta Chat server, no processing of personal data."
 msgstr ""
+"- **Elusió de dades**: Sense servidor Delta Chat, sense processament de "
+"dades personals."
 
 #: ../en/gdpr.md:17
 msgid "# Further Compliance to the GDPR "
-msgstr ""
+msgstr "# Compliment abastament del RGPD "
 
 #: ../en/gdpr.md:19
 msgid ""
 "- Does not require any **consent** (article 7 GDPR) from the users or their "
 "contacts (data subjects), because no address-book-data is transmitted."
 msgstr ""
+"- No requereix cap **consentiment** (article 7 RGPD) dels usuaris o els seus"
+" contactes (subjectes de les dades), perquè no es transmet cap dada de cap "
+"llibreta d'adreces."
 
 #: ../en/gdpr.md:21
 msgid ""
