--- a/ca/references.po
+++ b/ca/references.po
@@ -1,6 +1,6 @@
 # Translators:
 # björn petersen <r10s@b44t.com>, 2018
-# Calbasi <joan@calbasi.net>, 2018
+# Calbasi <joan@calbasi.net>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-01 22:15+0200\n"
 "PO-Revision-Date: 2018-04-21 22:06+0000\n"
-"Last-Translator: Calbasi <joan@calbasi.net>, 2018\n"
+"Last-Translator: Calbasi <joan@calbasi.net>, 2019\n"
 "Language-Team: Catalan (https://www.transifex.com/delta-chat/teams/76181/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,6 +39,8 @@ msgid ""
 "Although Delta Chat is still in beta state, there are already some "
 "interesting articles."
 msgstr ""
+"Malgrat que Delta Chat encara està en estadi beta, ja hi ha alguns articles "
+"interessants."
 
 #: ../en/references.md:14
 msgid ""
@@ -47,48 +49,62 @@ msgid ""
 "Please [let us know](imprint)\n"
 "or just do a [pull request](https://github.com/deltachat/deltachat-pages/edit/master/en/references.md)."
 msgstr ""
+"Aquesta llista no no és ni de lluny complerta -\n"
+"ens hem deixat algo?\n"
+"Siusplau [feu-nos-ho saber](imprint)\n"
+"o tireu pel dret amb un [pull request](https://github.com/deltachat/deltachat-pages/edit/master/en/references.md)."
 
 #: ../en/references.md:17
 msgid "## The Mozilla Thunderbird Blog: FOSDEM 2019 and DeltaChat"
-msgstr ""
+msgstr "## El blog de Mozilla Thunderbird: \"FOSDEM 2019 and DeltaChat\""
 
 #: ../en/references.md:19
 msgid ""
 "03/2019, <https://blog.mozilla.org/thunderbird/2019/03/fosdem-2019-and-"
 "deltachat/>"
 msgstr ""
+"03/2019, <https://blog.mozilla.org/thunderbird/2019/03/fosdem-2019-and-"
+"deltachat/>"
 
 #: ../en/references.md:22
 msgid ""
 "## habr.com (Large Russian technology site): децентрализованный мессенджер "
 "поверх электронной почты"
 msgstr ""
+"## habr.com (portal important de tecnologia a Rússia): децентрализованный "
+"мессенджер поверх электронной почты"
 
 #: ../en/references.md:24
 msgid "03/2019, <https://habr.com/ru/post/442266/>"
-msgstr ""
+msgstr "03/2019, <https://habr.com/ru/post/442266/>"
 
 #: ../en/references.md:27
 msgid ""
 "## technolike.com (Technology blog from Cuba): Delta chat, chatea por correo"
 " al más puro estilo WhatsApp"
 msgstr ""
+"## technolike.com (Blog cubanà sobre tecnologia): \"Delta chat, chatea por "
+"correo al más puro estilo WhatsApp\""
 
 #: ../en/references.md:29
 msgid ""
 "02/2019, <https://tecnolikecuba.com/delta-chat-chatea-por-correo-al-mas-"
 "puro-estilo-whatsapp/>"
 msgstr ""
+"02/2019, <https://tecnolikecuba.com/delta-chat-chatea-por-correo-al-mas-"
+"puro-estilo-whatsapp/>"
 
 #: ../en/references.md:32
 msgid "## blog.lenzg.net: Using Delta Chat with email sub-addresses"
-msgstr ""
+msgstr "## blog.lenzg.net: \"Using Delta Chat with email sub-addresses\""
 
 #: ../en/references.md:34
 msgid ""
 "02/2019, <http://blog.lenzg.net/2019/02/using-delta-chat-with-email-sub-"
 "addresses/>"
 msgstr ""
+"02/2019, <http://blog.lenzg.net/2019/02/using-delta-chat-with-email-sub-"
+"addresses/>"
 
 #: ../en/references.md:37
 msgid ""
@@ -179,13 +195,17 @@ msgid ""
 "## Wissensarbeiter Jochen Plikat (German blog): Zur Zukunft von SMS, "
 "WhatsApp & Co. (3)"
 msgstr ""
+"## Wissensarbeiter Jochen Plikat (blog alemany): \"Zur Zukunft von SMS, "
+"WhatsApp & Co. (3)\""
 
 #: ../en/references.md:67
 msgid "_\"Die Einrichtung von Delta Chat könnte kaum einfacher sein [...]\"_"
-msgstr ""
+msgstr "_\"Die Einrichtung von Delta Chat könnte kaum einfacher sein [...]\"_"
 
 #: ../en/references.md:68
 msgid ""
 "30.04.2019, <https://jochen-plikat.com/2019/04/30/zur-zukunft-von-sms-"
 "whatsapp-co-3/>"
 msgstr ""
+"30.04.2019, <https://jochen-plikat.com/2019/04/30/zur-zukunft-von-sms-"
+"whatsapp-co-3/>"
