--- a/de/references.po
+++ b/de/references.po
@@ -3,6 +3,7 @@
 # happyreacer <c.dummert@googlemail.com>, 2019
 # W R, 2019
 # Schiri Nowski <schirinowski@gmail.com>, 2019
+# T om, 2019
 # 
 #, fuzzy
 msgid ""
@@ -11,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-01 22:15+0200\n"
 "PO-Revision-Date: 2018-04-21 22:06+0000\n"
-"Last-Translator: Schiri Nowski <schirinowski@gmail.com>, 2019\n"
+"Last-Translator: T om, 2019\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -192,13 +193,17 @@ msgid ""
 "## Wissensarbeiter Jochen Plikat (German blog): Zur Zukunft von SMS, "
 "WhatsApp & Co. (3)"
 msgstr ""
+"## Wissensarbeiter Jochen Plikat (Deutscher Blog): Zur Zukunft von SMS, "
+"WhatsApp & Co. (3)"
 
 #: ../en/references.md:67
 msgid "_\"Die Einrichtung von Delta Chat könnte kaum einfacher sein [...]\"_"
-msgstr ""
+msgstr "_\"Die Einrichtung von Delta Chat könnte kaum einfacher sein [...]\"_"
 
 #: ../en/references.md:68
 msgid ""
 "30.04.2019, <https://jochen-plikat.com/2019/04/30/zur-zukunft-von-sms-"
 "whatsapp-co-3/>"
 msgstr ""
+"30.04.2019, <https://jochen-plikat.com/2019/04/30/zur-zukunft-von-sms-"
+"whatsapp-co-3/>"
