--- a/fr/download.po
+++ b/fr/download.po
@@ -2,6 +2,8 @@
 # björn petersen <r10s@b44t.com>, 2018
 # dudjima, 2018
 # John Btc, 2018
+# polo lancien <polo.lancien@aliceadsl.fr>, 2019
+# Eric Lavarde <ewl+transifex@lavar.de>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -10,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-01 22:15+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: John Btc, 2018\n"
+"Last-Translator: Eric Lavarde <ewl+transifex@lavar.de>, 2019\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,17 +35,21 @@ msgstr ""
 
 #: ../en/download.md:7
 msgid "# Delta/Android Downloads (Beta)"
-msgstr ""
+msgstr "# Télécharger Delta/Android (Bêta)"
 
 #: ../en/download.md:10
 msgid ""
 "[<img style=\"float:right\" src=\"../assets/home/get-it-on-gplay-beta.png\" alt=\"Beta testing on Google Play\" width=\"200\" />](https://play.google.com/store/apps/details?id=chat.delta)\n"
 "[<img style=\"float:right\" src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)"
 msgstr ""
+"[<img style=\"float:right\" src=\"../assets/home/get-it-on-gplay-beta.png\" alt=\"Beta testing on Google Play\" width=\"200\" />](https://play.google.com/store/apps/details?id=chat.delta)\n"
+"[<img style=\"float:right\" src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)"
 
 #: ../en/download.md:12
 msgid "Delta/Android is the most feature-rich and stable DeltaChat app. "
 msgstr ""
+"Delta/Android est l'application DeltaChat la plus riche en fonctionnalités "
+"et la plus stable. "
 
 #: ../en/download.md:17
 msgid ""
@@ -52,50 +58,66 @@ msgid ""
 "* [Download APK](https://github.com/deltachat/deltachat-android/releases) (experienced users only)\n"
 "* [View Changelog]({% include changelog-url %}), [contribute to the Android repo](https://github.com/deltachat/deltachat-android/). "
 msgstr ""
+"* [Télécharger depuis F-Droid](https://f-droid.org/app/com.b44t.messenger)\n"
+"* [Télécharger depuis Google Play Beta Channel](https://play.google.com/store/apps/details?id=chat.delta)\n"
+"* [Télécharger l'APK](https://github.com/deltachat/deltachat-android/releases) (utilisateurs avertis seulement)\n"
+"* [Voir le journal des modifications]({% include changelog-url %}), [contribuer au dépôt Android](https://github.com/deltachat/deltachat-android/). "
 
 #: ../en/download.md:20
 msgid "# Delta/Desktop Downloads (Beta)"
-msgstr ""
+msgstr "# Télécharger Delta/Desktop pour votre ordinateur (Bêta)"
 
 #: ../en/download.md:22
 msgid ""
 "Delta/Desktop is well usable and can be operated standalone or in "
 "conjunction with Android or iOS. "
 msgstr ""
+"Delta/Desktop est bien fonctionnel et peut être utilisé seul ou  combiné "
+"avec Android ou iOS. "
 
 #: ../en/download.md:24
 msgid ""
 "* [download for Linux from "
 "flathub](https://flathub.org/apps/details/chat.delta.desktop)"
 msgstr ""
+"* [télécharger pour Linux depuis "
+"flathub](https://flathub.org/apps/details/chat.delta.desktop)"
 
 #: ../en/download.md:26
 msgid ""
 "* [download for Mac from our github release "
 "page](https://github.com/deltachat/deltachat-desktop/releases/).  "
 msgstr ""
+"* [télécharger pour Mac depuis notre page de publication "
+"github](https://github.com/deltachat/deltachat-desktop/releases/).  "
 
 #: ../en/download.md:28
 msgid ""
 "* [Windows support pending, help needed!](https://github.com/deltachat"
 "/deltachat-desktop/issues/606) "
 msgstr ""
+"* [assistance pour Windows en attente, besoin "
+"d'aide!](https://github.com/deltachat/deltachat-desktop/issues/606) "
 
 #: ../en/download.md:30
 msgid ""
 "* [FAQ multiclient](help#multiclient) page on how to synchronize Desktop "
 "with another Delta app. "
 msgstr ""
+"* page [FAQ multi-client](aide#multi-client) sur comment synchroniser "
+"l'application ordinateur de bureau avec une autre application Delta. "
 
 #: ../en/download.md:33
 msgid ""
 "* [View Changelog](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md),\n"
 "  [contribute to Desktop repository](https://github.com/deltachat/deltachat-desktop/). "
 msgstr ""
+"* [Voir journal des modifications](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md),\n"
+"  [contribuer au dépôt Delta/Desktop](https://github.com/deltachat/deltachat-desktop/). "
 
 #: ../en/download.md:36
 msgid "# Delta/iOS on TestFlight (Beta)"
-msgstr ""
+msgstr "# Delta/iOS sur le TestFlight (Bêta)"
 
 #: ../en/download.md:38
 msgid ""
@@ -112,26 +134,32 @@ msgid ""
 "Delta/iOS supports basic functionality but not all features offered by Android or Desktop. \n"
 "Betas are distributed via Testflight. "
 msgstr ""
+"Delta/iOS prend en charge les fonctionnalités de base, mais pas toutes les fonctionnalités offertes par Android ou Desktop. \n"
+"Les versions bêta sont distribuées via Testflight. "
 
 #: ../en/download.md:43
 msgid ""
-"- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for "
+"- [testflight invite page](https://testflight.apple.com/join/WVoYFOZe) for "
 "your iPhone or iPad."
 msgstr ""
+"- [page d'invitation testflight](https://testflight.apple.com/join/WVoYFOZe)"
+" pour votre iPhone ou iPad."
 
 #: ../en/download.md:45
 msgid ""
 "- [contribute to iOS development](https://github.com/deltachat/deltachat-"
 "ios/). "
 msgstr ""
+"- [contribuer au développement iOS](https://github.com/deltachat/deltachat-"
+"ios/). "
 
 #: ../en/download.md:47
 msgid "- Scan this QR code with the camera app of your iPhone/iPad"
-msgstr ""
+msgstr "- Numérisez ce QR code avec l'application caméra de votre iPhone/iPad"
 
 #: ../en/download.md:49
 msgid "  ![QRCode](../assets/home/deltachat_testflight_qrcode.png)"
-msgstr ""
+msgstr "  ![QRCode](../assets/home/deltachat_testflight_qrcode.png)"
 
 #: ../en/download.md:52
 msgid "# Verify Downloads"
@@ -142,20 +170,24 @@ msgid ""
 "For Android, you can verify the signing certificate on the APK matches one "
 "of the following SHA256 fingerprints:  "
 msgstr ""
-"Pour Android, vous pouvez vérifier que signature du certificat de l'APK "
-"correspond à l'un des empreintes SHA256 suivantes:"
+"Pour Android, vous pouvez vérifier que la signature du certificat de l'APK "
+"correspond à l'une des empreintes SHA256 suivantes:"
 
 #: ../en/download.md:57
 msgid ""
 "* For F-Droid downloads:  \n"
 "  `{% include fingerprint-f-droid %}`"
 msgstr ""
+"* Pour téléchargements F-Droid :  \n"
+"  `{% include fingerprint-f-droid %}`"
 
 #: ../en/download.md:60
 msgid ""
 "* Other APK downloads:  \n"
 "  `{% include fingerprint-local %}`"
 msgstr ""
+"* Autres téléchargements d'APK :  \n"
+"  `{% include fingerprint-local %}`"
 
 #: ../en/download.md:63
 msgid ""
