--- a/uk/download.po
+++ b/uk/download.po
@@ -125,11 +125,11 @@ msgstr ""
 
 #: ../en/download.md:43
 msgid ""
-"- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for "
+"- [testflight invite page](https://testflight.apple.com/join/WVoYFOZe) for "
 "your iPhone or iPad."
 msgstr ""
 "- [сторінка запрошення для Тестових "
-"Польотів](https://testflight.apple.com/join/uEMc1NxS) для Вашого iPhone або "
+"Польотів](https://testflight.apple.com/join/WVoYFOZe) для Вашого iPhone або "
 "iPad."
 
 #: ../en/download.md:45
