--- a/de/download.po
+++ b/de/download.po
@@ -7,24 +7,24 @@
 # Moni P. <monitx@deltachat.de>, 2019
 # W R, 2019
 # Sven, 2019
-# 
+# Lukas, 2019
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-01 22:15+0200\n"
-"PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Sven, 2019\n"
+"PO-Revision-Date: 2019-10-13 22:53+0200\n"
+"Last-Translator: Lukas, 2019\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Translate Toolkit 2.2.5\n"
+"X-Generator: Poedit 2.2.1\n"
 
-#: ../en/download.md:5
+#: ../en/download.md:2
 msgid ""
 "---\n"
 "title: Download\n"
@@ -36,23 +36,25 @@ msgstr ""
 "layout: default-de\n"
 "---"
 
-#: ../en/download.md:7
+#: ../en/download.md:6
 msgid "# Delta/Android Downloads (Beta)"
 msgstr "# Delta/Android Downloads (Beta)"
 
-#: ../en/download.md:10
+#: ../en/download.md:8
 msgid ""
-"[<img style=\"float:right\" src=\"../assets/home/get-it-on-gplay-beta.png\" alt=\"Beta testing on Google Play\" width=\"200\" />](https://play.google.com/store/apps/details?id=chat.delta)\n"
+"[<img style=\"float:right\" src=\"../assets/home/get-it-on-gplay-beta.png\" alt=\"Beta testing on Google Play\" width=\"200\" />](https://play.google.com/"
+"store/apps/details?id=chat.delta)\n"
 "[<img style=\"float:right\" src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)"
 msgstr ""
-"[<img style=\"float:right\" src=\"../assets/home/get-it-on-gplay-beta.png\" alt=\"Beta testing on Google Play\" width=\"200\" />](https://play.google.com/store/apps/details?id=chat.delta)\n"
+"[<img style=\"float:right\" src=\"../assets/home/get-it-on-gplay-beta.png\" alt=\"Beta testing on Google Play\" width=\"200\" />](https://play.google.com/"
+"store/apps/details?id=chat.delta)\n"
 "[<img style=\"float:right\" src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)"
 
-#: ../en/download.md:12
+#: ../en/download.md:11
 msgid "Delta/Android is the most feature-rich and stable DeltaChat app. "
 msgstr "Delta/Android ist die funktionsreichste und stabilste Delta Chat App."
 
-#: ../en/download.md:17
+#: ../en/download.md:13
 msgid ""
 "* [Download from F-Droid](https://f-droid.org/app/com.b44t.messenger)\n"
 "* [Download from Google Play Beta Channel](https://play.google.com/store/apps/details?id=chat.delta)\n"
@@ -64,73 +66,49 @@ msgstr ""
 "* [Download der APK](https://github.com/deltachat/deltachat-android/releases) (nur für erfahrene Anwender)\n"
 "* [Änderungshistorie ansehen]({% include changelog-url %}), [Beitragen zur Android repo](https://github.com/deltachat/deltachat-android/). "
 
-#: ../en/download.md:20
+#: ../en/download.md:19
 msgid "# Delta/Desktop Downloads (Beta)"
 msgstr "# Delta/Desktop Downloads (Beta)"
 
-#: ../en/download.md:22
-msgid ""
-"Delta/Desktop is well usable and can be operated standalone or in "
-"conjunction with Android or iOS. "
-msgstr ""
-"Delta/Desktop ist gut verwendbar und kann einzeln oder in Verbindung mit "
-"Android oder iOS betrieben werden. "
+#: ../en/download.md:21
+msgid "Delta/Desktop is well usable and can be operated standalone or in conjunction with Android or iOS. "
+msgstr "Delta/Desktop ist gut verwendbar und kann einzeln oder in Verbindung mit Android oder iOS betrieben werden. "
 
-#: ../en/download.md:24
-msgid ""
-"* [download for Linux from "
-"flathub](https://flathub.org/apps/details/chat.delta.desktop)"
-msgstr ""
-"* [Download für Linux von "
-"flathub](https://flathub.org/apps/details/chat.delta.desktop)"
+#: ../en/download.md:23
+msgid "* [download Latest for Mac OSX, Ubuntu 16.04-19.10 (scroll and click "assets")](https://github.com/deltachat/deltachat-desktop/releases/latest)"
+msgstr "* [Download Latest für MacOS, Ubuntu 16.04-19.10 (auf der Seite gibt es einen Link mit "Assets")](https://github.com/deltachat/deltachat-desktop/releases/latest)."
 
-#: ../en/download.md:26
-msgid ""
-"* [download for Mac from our github release "
-"page](https://github.com/deltachat/deltachat-desktop/releases/).  "
-msgstr ""
-"* [Download für Mac von unserer Github Release "
-"Seite](https://github.com/deltachat/deltachat-desktop/releases/).  "
+#: ../en/download.md:25
+msgid "* [download experimental pre-release for Windows](https://github.com/deltachat/deltachat-desktop/releases/)"
+msgstr "* [Experimentelle Windows Vorab-Version herunterladen](https://github.com/deltachat/deltachat-desktop/releases/)"
 
-#: ../en/download.md:28
-msgid ""
-"* [Windows support pending, help needed!](https://github.com/deltachat"
-"/deltachat-desktop/issues/606) "
-msgstr ""
-"* [Windows-Support steht noch aus, Hilfe wird "
-"benötigt!](https://github.com/deltachat/deltachat-desktop/issues/606) "
+#: ../en/download.md:27
+msgid "* [download for Linux from flathub (OUTDATED)](https://flathub.org/apps/details/chat.delta.desktop)"
+msgstr "* [Download für Linux von flathub (NICHT MEHR AKTUELL](https://flathub.org/apps/details/chat.delta.desktop)"
 
-#: ../en/download.md:30
-msgid ""
-"* [FAQ multiclient](help#multiclient) page on how to synchronize Desktop "
-"with another Delta app. "
-msgstr ""
-"* [FAQ Multiclient](help#multiclient) Hilfe zur Synchronisation von Desktop "
-"mit einer anderen Delta-Applikation "
+#: ../en/download.md:29
+msgid "* [FAQ multiclient](help#multiclient) page on how to synchronize Desktop with another Delta app. "
+msgstr "* [FAQ Multiclient](help#multiclient) Hilfe zur Synchronisation von Desktop mit einer anderen Delta-Applikation "
 
-#: ../en/download.md:33
+#: ../en/download.md:31
 msgid ""
 "* [View Changelog](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md),\n"
 "  [contribute to Desktop repository](https://github.com/deltachat/deltachat-desktop/). "
 msgstr ""
 "* [Changelog anzeigen](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md),\n"
-"  [zu den Desktop-Quellen beitragen](https://github.com/deltachat/deltachat-desktop/). "
+"  [zum Desktop Repository beitragen](https://github.com/deltachat/deltachat-desktop/). "
 
-#: ../en/download.md:36
+#: ../en/download.md:35
 msgid "# Delta/iOS on TestFlight (Beta)"
 msgstr "# Delta/iOS auf TestFlight (Beta)"
 
-#: ../en/download.md:38
+#: ../en/download.md:37
 msgid ""
-"<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple "
-"AppStore\" width=\"200\" style=\"float:right; filter: opacity(.3) "
-"grayscale(100%);\" />"
+"<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple AppStore\" width=\"200\" style=\"float:right; filter: opacity(.3) grayscale(100%);\" />"
 msgstr ""
-"<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple "
-"AppStore\" width=\"200\" style=\"float:right; filter: opacity(.3) "
-"grayscale(100%);\" />"
+"<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple AppStore\" width=\"200\" style=\"float:right; filter: opacity(.3) grayscale(100%);\" />"
 
-#: ../en/download.md:41
+#: ../en/download.md:39
 msgid ""
 "Delta/iOS supports basic functionality but not all features offered by Android or Desktop. \n"
 "Betas are distributed via Testflight. "
@@ -138,43 +116,31 @@ msgstr ""
 "Delta/iOS unterstützt grundlegende Funktionen, aber nicht alle Features, die für Android oder Desktop angeboten werden. \n"
 "Betas werden über Testflight verteilt."
 
-#: ../en/download.md:43
-msgid ""
-"- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for "
-"your iPhone or iPad."
-msgstr ""
-"- [testflight Einladungsseite](https://testflight.apple.com/join/uEMc1NxS) "
-"für Ihr iPhone oder iPad."
+#: ../en/download.md:42
+msgid "- [testflight invite page](https://testflight.apple.com/join/uEMc1NxS) for your iPhone or iPad."
+msgstr "- [testflight Einladungsseite](https://testflight.apple.com/join/uEMc1NxS) für Ihr iPhone oder iPad."
 
-#: ../en/download.md:45
-msgid ""
-"- [contribute to iOS development](https://github.com/deltachat/deltachat-"
-"ios/). "
-msgstr ""
-"- [zur Entwicklung für iOS beitragen](https://github.com/deltachat"
-"/deltachat-ios/). "
+#: ../en/download.md:44
+msgid "- [contribute to iOS development](https://github.com/deltachat/deltachat-ios/). "
+msgstr "- [zur Entwicklung für iOS beitragen](https://github.com/deltachat/deltachat-ios/). "
 
-#: ../en/download.md:47
+#: ../en/download.md:46
 msgid "- Scan this QR code with the camera app of your iPhone/iPad"
 msgstr "- Diesen QR-Code mit der Kamera-App des iPhone/iPad scannen"
 
-#: ../en/download.md:49
+#: ../en/download.md:48
 msgid "  ![QRCode](../assets/home/deltachat_testflight_qrcode.png)"
 msgstr "  ![QRCode](../assets/home/deltachat_testflight_qrcode.png)"
 
-#: ../en/download.md:52
+#: ../en/download.md:51
 msgid "# Verify Downloads"
 msgstr "# Downloads verifizieren"
 
-#: ../en/download.md:54
-msgid ""
-"For Android, you can verify the signing certificate on the APK matches one "
-"of the following SHA256 fingerprints:  "
-msgstr ""
-"Um Android-APKs zu verifizieren, können Sie überprüfen, ob das Signatur-"
-"Zertifikat einem der folgenden SHA256-Fingerabdrücke entspricht:"
+#: ../en/download.md:53
+msgid "For Android, you can verify the signing certificate on the APK matches one of the following SHA256 fingerprints:  "
+msgstr "Um Android-APKs zu verifizieren, können Sie überprüfen, ob das Signatur-Zertifikat einem der folgenden SHA256-Fingerabdrücke entspricht:"
 
-#: ../en/download.md:57
+#: ../en/download.md:55
 msgid ""
 "* For F-Droid downloads:  \n"
 "  `{% include fingerprint-f-droid %}`"
@@ -182,18 +148,18 @@ msgstr ""
 "* Für F-Droid Downloads:  \n"
 "  `{% include fingerprint-f-droid %}`"
 
-#: ../en/download.md:60
+#: ../en/download.md:58
 msgid ""
 "* Other APK downloads:  \n"
 "  `{% include fingerprint-local %}`"
 msgstr ""
-"* Andere APK downloads:  \n"
+"* Andere APK Downloads:  \n"
 "  `{% include fingerprint-local %}`"
 
-#: ../en/download.md:63
+#: ../en/download.md:61
 msgid ""
 "To print the SHA256 fingerprints of the APK signing certificate you can use eg.  \n"
 "`keytool -list -printcert -jarfile <APK-file>`"
 msgstr ""
-"Um den  SHA256-Fingerabduck des Signatur-Zertifikats anzuzeigen, kann z.B. das folgende Kommando verwendet werden:  \n"
+"Um den SHA256-Fingerabduck des Signatur-Zertifikats anzuzeigen, kann z.B. der folgende Befehl verwendet werden:  \n"
 "`keytool -list -printcert -jarfile <APK-Datei>`"
