--- a/es/contribute.po
+++ b/es/contribute.po
@@ -1,14 +1,15 @@
 # Translators:
 # Asiel Díaz Benítez <asieldbenitez@gmail.com>, 2019
+# Victor Amaro <vlamaro123@gmail.com>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-13 18:03+0200\n"
+"POT-Creation-Date: 2019-11-13 20:58+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Asiel Díaz Benítez <asieldbenitez@gmail.com>, 2019\n"
+"Last-Translator: Victor Amaro <vlamaro123@gmail.com>, 2019\n"
 "Language-Team: Spanish (https://www.transifex.com/delta-chat/teams/76181/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -81,6 +82,12 @@ msgid ""
 "- [C Core Library + Python Bindings Issues](https://github.com/deltachat/deltachat-core/issues)\n"
 "- [Rust Core Library + Python Bindings Issues](https://github.com/deltachat/deltachat-core-rust/issues)"
 msgstr ""
+"- [Traducciones en Transifex](https://www.transifex.com/delta-chat/public/)\n"
+"- [Discusiones sobre Delta Chat para Android](https://github.com/deltachat/deltachat-android/issues)\n"
+"- [Discusiones sobre Delta Chat para Escritorio](https://github.com/deltachat/deltachat-desktop/issues)\n"
+"- [Discusiones sobre Delta Chat para iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
+"- [Discusiones sobre C Core Library y Python Bindings](https://github.com/deltachat/deltachat-core/issues)\n"
+"- [Discusiones sobre Rust Core Library y Python Bindings](https://github.com/deltachat/deltachat-core-rust/issues)"
 
 #: ../en/contribute.md:31
 msgid ""
